<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pro_ser.mobil.yarnnumber.fragment.ContactFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-4dp"
            android:text="@string/contact_phone"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-3dp"
            android:autoLink="phone"
            android:text="@string/contact_phone_number"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-11dp"
            android:text="@string/contact_fax"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-7dp"
            android:autoLink="phone"
            android:text="@string/contact_fax_number"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView9"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-6dp"
            android:text="@string/contact_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-3dp"
            android:autoLink="email"
            android:text="@string/contact_email_string"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-2dp"
            android:text="WebSite"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="39dp"
            android:autoLink="web"
            android:text="@string/contact_website"
            android:textAlignment="center"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>
</FrameLayout>
