<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pro_ser.mobil.yarnnumber.fragment.CalculatorFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_type"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_yarn_count"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNmbr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_yarn_no_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNmbr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_yarn_no_2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNmbr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNmbr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_yarn_no_3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNmbr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtNmbr4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_yarn_no_4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNmbr4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNmbr5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_yarn_no_5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNmbr5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtNmbr6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_yarn_no_6"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNmbr6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btncalculate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculator_calculate" />

        <TextView
            android:id="@+id/txtresult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
