<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pro_ser.mobil.yarnnumber.fragment.ConverterFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/txtlenght"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/converter_lenght" />

            <EditText
                android:id="@+id/etlenght"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/converter_meter"
                android:inputType="numberSigned|numberDecimal" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="m" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/txtweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/converter_weight" />

            <EditText
                android:id="@+id/etweight"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/converter_gram"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="gr" />

        </LinearLayout>

        <Button
            android:id="@+id/btnconvert"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculator_calculate" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"  >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtden"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="den"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtdenresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtktex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="ktex"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtktexresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txttex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="tex"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txttexresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtdtex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="dtex"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtdtexresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtmtex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="mtex"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtmtexresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtNm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Nm"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtNmresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtNe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Ne"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtNeresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtNel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="NeL"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtNeLresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtNeK"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="NeK"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtNeKresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtNeW"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="NeW"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtNeWresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
